* New: Added a clean method for retrieving Unit objects. UnitObj = LibSUnit:RequestDetails(UnitID)
* Note: Using this method will create the Unit if available, or return an existing unit object.
* Fixed: Prevented UnitObj.Health sometimes being nil.
* Removed: Redundant raid queue code. Slight performance increase.

Castbar System (During Alpha)
* Note: Currently under testing. Main engine runs in the background for bug finding.
* New: Engine Tracking only for Player castbar.
* New: Engine Tracking only for Player Target castbar.
* New: Engine Tracking only for Player Focus castbar.

Slivers
* Grim Awakening
** Magma Lord Kaliban
*** New: Added Alert for Sanguine Incantation. (Standard Yellow interrupt)
*** Change: Alert color changed for soul shatter. Now Orange by default.
** Salvarola
*** New: Added Mechanic Spy for Curse of Magma.
*** Change: Incineration timer changed from a Wait style to standard.
** Ultane
*** New: Added Tank-Swap monitoring for Devil's Pact.
*** New: Added Alert and Spy for Spirit Shackle
*** New: Added Alert and Spy for Infernal Radiance.

----
v1.5.0

LibSUnit
* Change: Res States will only be checked if a heal of more than 1 is encountered. This should eradicate false res events.

Chronicle
* Fixed: Error 155 in Kyo encounter.

----
v1.4.9

Note: 
* The Event model isn't working as intended. It'll not break, however event removal blocks pass-through to the game world. I'm converting all Frame events to work as it was intended. As soon as Trion fix their end, KBM will work as planned.

System
* Change: Renamed some event labels to avoid issues with other addons.
* Menu
** Fixed: All Timer, Alert and Spy options should once again be adjustable without needing to /reloadui or log out/in.
* Drag Frames
** Change: Updated to new event model.
* KBM Button
** Change: Updated to new event model.
** Fixed: Restored functionality to move the button.

Ready Check
* Change: Converted Button systems over to new event model.